--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -39,8 +39,19 @@ body {
   font-size: 20px;
 }
 
+#results .resultOption span {
+  font-style: italic;
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 16px;
+}
+
 #results .resultOption.active {
   background: rgba(20,20,20,0.3);
+  font-weight: bold;
+}
+#results .resultOption.active span {
+  font-weight: normal;
 }
 
 #results .resultOption:last-of-type {
